add table css & app material module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sound-tunes-angular",
+  "name": "fnd-store-web-angular-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
